Added Format chanegs for estimated subsistence minimum

--- a/DSL/Ruuter.public/GET/statistics-estonia/estimated-subsistence-minimum.yml
+++ b/DSL/Ruuter.public/GET/statistics-estonia/estimated-subsistence-minimum.yml
@@ -38,7 +38,7 @@ makeAPIRequest:
 assingResult:
   assign:
     res: {
-      "result": "Arvestuslik elatusmiinimum on ${subsistence.response.body.value[0]}€/ kuus"
+      "result": "Arvestuslik elatusmiinimum ${lastYear}. aastal on ${subsistence.response.body.value[0]} €/kuus"
     }
   next: formatMessages
 
