--- a/DSL/Ruuter.public/GET/public-initiatives/most-recent.yml
+++ b/DSL/Ruuter.public/GET/public-initiatives/most-recent.yml
@@ -89,7 +89,7 @@ assignVariables:
 formatResponse:
   assign:
     res: {
-      "result" : "Viis viimast aktiivset algatust:\\n
+      "result" : "Viis viimast aktiivset rahvaalgatust:\\n
         1. ${first.title}\\n
           Kogutud allkirjad: ${first.signatureCount}/ min. allkirjad: ${first.signatureThreshold}\\n\\n
         2. ${second.title}\\n
