Added format changes for riigikogu

--- a/DSL/Ruuter.public/GET/riigikogu/members-participation.yml
+++ b/DSL/Ruuter.public/GET/riigikogu/members-participation.yml
@@ -49,7 +49,7 @@ formatNotFound:
 formatResult:
   assign:
     res: {
-      "result": "${memberData.fullName} on aastal ${year} osalenud istungitel ${memberData.participated} korda ja puudunud ${memberData.absent} korda."
+      "result": "${memberData.fullName} on ${year}. aastal osalenud ${memberData.participated} istungil ja puudunud ${memberData.absent} korda."
     }
   next: formatMessages
 
